--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/style.min.css?_v=20240116111436">
 
-	<title>«PRJ» — Главная</title>
+	<title>«Sanremo» — Услуги сантехника в Омске круглосуточно</title>
 
 	<link rel="icon" type="image/x-icon" href="img/icons/fav/favicon.ico">
 	<link rel="apple-touch-icon" sizes="152x152" href="img/icons/fav/apple-touch-icon.png">
