--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/style.min.css?_v=20240116111436">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240118144545">
 
 	<title>«Sanremo» — Услуги сантехника в Омске круглосуточно</title>
 
@@ -72,7 +72,6 @@
 				<div class="header__contacts-wrap">
 					<div class="cnt-tme">
 						<i class="ic ic-crk"></i>
-						</i>
 						<p>Пн-Вс: 9:30-19:30</p>
 					</div>
 					<div class="cnt-phn">
@@ -117,9 +116,8 @@
 						</div>
 
 						<div class="form-base__check fsc-banner__form-check form-hrz__check">
-							<div class="form-base__check-lbl cta__check-lbl" for="checkBannerCall">
-								<input class="input-check j-inp-chk" type="checkbox" value="" id="checkBannerCall"
-									checked required>
+							<div class="form-base__check-lbl cta__check-lbl">
+								<input class="input-check j-inp-chk" type="checkbox" value="" checked required>
 								Вы соглашаетесь на
 								<span class="j-lnk-dsb">условия обработки персональных данных</span>
 							</div>
@@ -156,7 +154,7 @@
 			</div>
 			<div class="fsc-banner__pic">
 				<img class="wow animate__animated animate__fadeInUp" data-wow-delay=".8s" src="img/pic/bannerPic.png"
-					alt="">
+					alt="main pic" width="417" height="399">
 			</div>
 		</div>
 
@@ -179,7 +177,7 @@
 				<div class="services__grid">
 					<div class="service-card" data-fancybox data-src="#modal-ord">
 						<div class="service-card__pic">
-							<picture><source srcset="img/pic/services/1.webp" type="image/webp"><img src="img/pic/services/1.jpg" alt="услуга 1"></picture>
+							<picture><source srcset="img/pic/services/1.webp" type="image/webp"><img src="img/pic/services/1.jpg" alt="услуга 1" width="301" height="200"></picture>
 						</div>
 						<div class="service-card__info">
 							<div class="service-card__title">
@@ -195,7 +193,7 @@
 					</div>
 					<div class="service-card" data-fancybox data-src="#modal-ord">
 						<div class="service-card__pic">
-							<picture><source srcset="img/pic/services/2.webp" type="image/webp"><img src="img/pic/services/2.jpg" alt="услуга 2"></picture>
+							<picture><source srcset="img/pic/services/2.webp" type="image/webp"><img src="img/pic/services/2.jpg" alt="услуга 2" width="301" height="200"></picture>
 						</div>
 						<div class="service-card__info">
 							<div class="service-card__title">
@@ -211,7 +209,7 @@
 					</div>
 					<div class="service-card" data-fancybox data-src="#modal-ord">
 						<div class="service-card__pic">
-							<picture><source srcset="img/pic/services/3.webp" type="image/webp"><img src="img/pic/services/3.jpg" alt="услуга 3"></picture>
+							<picture><source srcset="img/pic/services/3.webp" type="image/webp"><img src="img/pic/services/3.jpg" alt="услуга 3" width="301" height="200"></picture>
 						</div>
 						<div class="service-card__info">
 							<div class="service-card__title">
@@ -227,7 +225,7 @@
 					</div>
 					<div class="service-card" data-fancybox data-src="#modal-ord">
 						<div class="service-card__pic">
-							<picture><source srcset="img/pic/services/4.webp" type="image/webp"><img src="img/pic/services/4.jpg" alt="услуга 4"></picture>
+							<picture><source srcset="img/pic/services/4.webp" type="image/webp"><img src="img/pic/services/4.jpg" alt="услуга 4" width="301" height="200"></picture>
 						</div>
 						<div class="service-card__info">
 							<div class="service-card__title">
@@ -243,7 +241,7 @@
 					</div>
 					<div class="service-card" data-fancybox data-src="#modal-ord">
 						<div class="service-card__pic">
-							<picture><source srcset="img/pic/services/5.webp" type="image/webp"><img src="img/pic/services/5.jpg" alt="услуга 5"></picture>
+							<picture><source srcset="img/pic/services/5.webp" type="image/webp"><img src="img/pic/services/5.jpg" alt="услуга 5" width="301" height="200"></picture>
 						</div>
 						<div class="service-card__info">
 							<div class="service-card__title">
@@ -259,7 +257,7 @@
 					</div>
 					<div class="service-card" data-fancybox data-src="#modal-ord">
 						<div class="service-card__pic">
-							<picture><source srcset="img/pic/services/6.webp" type="image/webp"><img src="img/pic/services/6.jpg" alt="услуга 6"></picture>
+							<picture><source srcset="img/pic/services/6.webp" type="image/webp"><img src="img/pic/services/6.jpg" alt="услуга 6" width="301" height="200"></picture>
 						</div>
 						<div class="service-card__info">
 							<div class="service-card__title">
@@ -275,7 +273,7 @@
 					</div>
 					<div class="service-card" data-fancybox data-src="#modal-ord">
 						<div class="service-card__pic">
-							<picture><source srcset="img/pic/services/7.webp" type="image/webp"><img src="img/pic/services/7.jpg" alt="услуга 7"></picture>
+							<picture><source srcset="img/pic/services/7.webp" type="image/webp"><img src="img/pic/services/7.jpg" alt="услуга 7" width="301" height="200"></picture>
 						</div>
 						<div class="service-card__info">
 							<div class="service-card__title">
@@ -291,7 +289,7 @@
 					</div>
 					<div class="service-card" data-fancybox data-src="#modal-ord">
 						<div class="service-card__pic">
-							<picture><source srcset="img/pic/services/8.webp" type="image/webp"><img src="img/pic/services/8.jpg" alt="услуга 8"></picture>
+							<picture><source srcset="img/pic/services/8.webp" type="image/webp"><img src="img/pic/services/8.jpg" alt="услуга 8" width="301" height="200"></picture>
 						</div>
 						<div class="service-card__info">
 							<div class="service-card__title">
@@ -307,7 +305,7 @@
 					</div>
 					<div class="service-card" data-fancybox data-src="#modal-ord">
 						<div class="service-card__pic">
-							<picture><source srcset="img/pic/services/1.webp" type="image/webp"><img src="img/pic/services/1.jpg" alt="услуга 1"></picture>
+							<picture><source srcset="img/pic/services/1.webp" type="image/webp"><img src="img/pic/services/1.jpg" alt="услуга 9" width="301" height="200"></picture>
 						</div>
 						<div class="service-card__info">
 							<div class="service-card__title">
@@ -323,7 +321,7 @@
 					</div>
 					<div class="service-card" data-fancybox data-src="#modal-ord">
 						<div class="service-card__pic">
-							<picture><source srcset="img/pic/services/2.webp" type="image/webp"><img src="img/pic/services/2.jpg" alt="услуга 2"></picture>
+							<picture><source srcset="img/pic/services/2.webp" type="image/webp"><img src="img/pic/services/2.jpg" alt="услуга 10" width="301" height="200"></picture>
 						</div>
 						<div class="service-card__info">
 							<div class="service-card__title">
@@ -339,7 +337,7 @@
 					</div>
 					<div class="service-card" data-fancybox data-src="#modal-ord">
 						<div class="service-card__pic">
-							<picture><source srcset="img/pic/services/3.webp" type="image/webp"><img src="img/pic/services/3.jpg" alt="услуга 3"></picture>
+							<picture><source srcset="img/pic/services/3.webp" type="image/webp"><img src="img/pic/services/3.jpg" alt="услуга 11" width="301" height="200"></picture>
 						</div>
 						<div class="service-card__info">
 							<div class="service-card__title">
@@ -355,7 +353,7 @@
 					</div>
 					<div class="service-card" data-fancybox data-src="#modal-ord">
 						<div class="service-card__pic">
-							<picture><source srcset="img/pic/services/4.webp" type="image/webp"><img src="img/pic/services/4.jpg" alt="услуга 4"></picture>
+							<picture><source srcset="img/pic/services/4.webp" type="image/webp"><img src="img/pic/services/4.jpg" alt="услуга 12" width="301" height="200"></picture>
 						</div>
 						<div class="service-card__info">
 							<div class="service-card__title">
@@ -371,7 +369,7 @@
 					</div>
 					<div class="service-card" data-fancybox data-src="#modal-ord">
 						<div class="service-card__pic">
-							<picture><source srcset="img/pic/services/5.webp" type="image/webp"><img src="img/pic/services/5.jpg" alt="услуга 5"></picture>
+							<picture><source srcset="img/pic/services/5.webp" type="image/webp"><img src="img/pic/services/5.jpg" alt="услуга 13" width="301" height="200"></picture>
 						</div>
 						<div class="service-card__info">
 							<div class="service-card__title">
@@ -387,7 +385,7 @@
 					</div>
 					<div class="service-card" data-fancybox data-src="#modal-ord">
 						<div class="service-card__pic">
-							<picture><source srcset="img/pic/services/6.webp" type="image/webp"><img src="img/pic/services/6.jpg" alt="услуга 6"></picture>
+							<picture><source srcset="img/pic/services/6.webp" type="image/webp"><img src="img/pic/services/6.jpg" alt="услуга 14" width="301" height="200"></picture>
 						</div>
 						<div class="service-card__info">
 							<div class="service-card__title">
@@ -403,7 +401,7 @@
 					</div>
 					<div class="service-card" data-fancybox data-src="#modal-ord">
 						<div class="service-card__pic">
-							<picture><source srcset="img/pic/services/7.webp" type="image/webp"><img src="img/pic/services/7.jpg" alt="услуга 7"></picture>
+							<picture><source srcset="img/pic/services/7.webp" type="image/webp"><img src="img/pic/services/7.jpg" alt="услуга 15" width="301" height="200"></picture>
 						</div>
 						<div class="service-card__info">
 							<div class="service-card__title">
@@ -419,7 +417,7 @@
 					</div>
 					<div class="service-card" data-fancybox data-src="#modal-ord">
 						<div class="service-card__pic">
-							<picture><source srcset="img/pic/services/8.webp" type="image/webp"><img src="img/pic/services/8.jpg" alt="услуга 8"></picture>
+							<picture><source srcset="img/pic/services/8.webp" type="image/webp"><img src="img/pic/services/8.jpg" alt="услуга 16" width="301" height="200"></picture>
 						</div>
 						<div class="service-card__info">
 							<div class="service-card__title">
@@ -459,8 +457,8 @@
 						</div>
 
 						<div class="form-base__check form-hrz__check">
-							<div class="form-base__check-lbl cta__check-lbl" for="checkCtaCall">
-								<input class="input-check j-inp-chk" type="checkbox" value="" id="checkCtaCall" checked>
+							<div class="form-base__check-lbl cta__check-lbl">
+								<input class="input-check j-inp-chk" type="checkbox" value="" checked>
 								Вы соглашаетесь на
 								<span class="j-chk-dsb">условия обработки персональных данных</span>
 							</div>
@@ -974,7 +972,7 @@
 											<span>в штате</span>
 										</div>
 									</div>
-									<picture><source srcset="img/pic/workers/1.webp" type="image/webp"><img src="img/pic/workers/1.jpg" alt="1"></picture>
+									<picture><source srcset="img/pic/workers/1.webp" type="image/webp"><img src="img/pic/workers/1.jpg" alt="1" width="396" height="200"></picture>
 								</div>
 								<div class="teammate__info shw-mre">
 									<div class="teammate__name">
@@ -1011,7 +1009,7 @@
 											<span>в штате</span>
 										</div>
 									</div>
-									<picture><source srcset="img/pic/workers/2.webp" type="image/webp"><img src="img/pic/workers/2.jpg" alt="2"></picture>
+									<picture><source srcset="img/pic/workers/2.webp" type="image/webp"><img src="img/pic/workers/2.jpg" alt="2" width="396" height="200"></picture>
 								</div>
 								<div class="teammate__info shw-mre">
 									<div class="teammate__name">
@@ -1048,7 +1046,7 @@
 											<span>в штате</span>
 										</div>
 									</div>
-									<picture><source srcset="img/pic/workers/3.webp" type="image/webp"><img src="img/pic/workers/3.jpg" alt="3"></picture>
+									<picture><source srcset="img/pic/workers/3.webp" type="image/webp"><img src="img/pic/workers/3.jpg" alt="3" width="396" height="200"></picture>
 								</div>
 								<div class="teammate__info shw-mre">
 									<div class="teammate__name">
@@ -1085,7 +1083,7 @@
 											<span>в штате</span>
 										</div>
 									</div>
-									<picture><source srcset="img/pic/workers/4.webp" type="image/webp"><img src="img/pic/workers/4.jpg" alt="4"></picture>
+									<picture><source srcset="img/pic/workers/4.webp" type="image/webp"><img src="img/pic/workers/4.jpg" alt="4" width="396" height="200"></picture>
 								</div>
 								<div class="teammate__info shw-mre">
 									<div class="teammate__name">
@@ -1147,7 +1145,7 @@
 
 			<div class="about__pic">
 				<img class="wow animate__animated animate__fadeIn" data-wow-delay=".8s" src="img/pic/aboutPic.png"
-					alt="about">
+					alt="about" width="487" height="487">
 
 			</div>
 		</div>
@@ -1246,8 +1244,8 @@
 					</div>
 
 					<div class="form-base__check form-hrz__check">
-						<div class="form-base__check-lbl cta__check-lbl" for="checkCtaCall2">
-							<input class="input-check j-inp-chk" type="checkbox" value="" id="checkCtaCall2" checked>
+						<div class="form-base__check-lbl cta__check-lbl">
+							<input class="input-check j-inp-chk" type="checkbox" value="" checked>
 							Я согласен на
 							<span class="j-chk-dsb">условия обработки персональных данных</span>
 						</div>
@@ -1347,7 +1345,7 @@
 			<span>Хотите узнать больше? Расскажем!</span>
 		</div>
 
-		<form action="" class="form-base" method="POST" id="form-modal" enctype="multipart/form-data">
+		<form action="#" class="form-base" method="POST" id="form-modal" enctype="multipart/form-data">
 			<div class="form-base__inputs">
 				<label class="input-box form-base__inp mdl-clb__inp">
 					<input type="text" name="username" placeholder="Имя" class="j-inp-nme" maxlength='12'
@@ -1359,8 +1357,8 @@
 			</div>
 			<button type="submit" class="btn-main js-frm-sbm form-base__btn">Отправить заявку</button>
 			<div class="form-base__check mdl-clb__check">
-				<div class="form-base__check-lbl" for="checkFormCall">
-					<input class="input-check j-inp-chk" type="checkbox" value="" id="checkFormCall" checked>
+				<div class="form-base__check-lbl">
+					<input class="input-check j-inp-chk" type="checkbox" value="" checked>
 					Вы соглашаетесь на
 					<span class="j-chk-dsb">условия обработки персональных
 						данных</span>
@@ -1495,7 +1493,7 @@
 </div>
 
 
-	<script src="js/script.min.js?_v=20240116111436"></script>
+	<script src="js/script.min.js?_v=20240118144545"></script>
 
 
 </body>
