--- a/index.html
+++ b/index.html
@@ -1481,8 +1481,8 @@
 			</div>
 			<button type="submit" class="btn-main js-frm-sbm form-base__btn">Отправить заявку</button>
 			<div class="form-base__check mdl-clb__check">
-				<div class="form-base__check-lbl" for="checkModalOrd">
-					<input class="input-check j-inp-chk" type="checkbox" value="" id="checkModalOrd" checked>
+				<div class="form-base__check-lbl">
+					<input class="input-check j-inp-chk" type="checkbox" value="" checked>
 					Вы соглашаетесь на
 					<span class="j-chk-dsb">условия обработки персональных
 						данных</span>
