--- a/index.html
+++ b/index.html
@@ -1469,7 +1469,7 @@
 			<span>от 450 &#8381;</span>
 		</div>
 
-		<form action="" class="form-base" method="POST" id="form-modal-ord" enctype="multipart/form-data">
+		<form action="#" class="form-base" method="POST" id="form-modal-ord" enctype="multipart/form-data">
 			<div class="form-base__inputs">
 				<label class="input-box form-base__inp mdl-clb__inp">
 					<input type="text" name="username" placeholder="Имя" class="j-inp-nme" maxlength='12'
