--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/style.min.css?_v=20240118144545">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240118161610">
 
 	<title>«Sanremo» — Услуги сантехника в Омске круглосуточно</title>
 
@@ -1469,7 +1469,7 @@
 			<span>от 450 &#8381;</span>
 		</div>
 
-		<form action="" class="form-base" method="POST" id="form-modal-ord" enctype="multipart/form-data">
+		<form action="#" class="form-base" method="POST" id="form-modal-ord" enctype="multipart/form-data">
 			<div class="form-base__inputs">
 				<label class="input-box form-base__inp mdl-clb__inp">
 					<input type="text" name="username" placeholder="Имя" class="j-inp-nme" maxlength='12'
@@ -1481,8 +1481,8 @@
 			</div>
 			<button type="submit" class="btn-main js-frm-sbm form-base__btn">Отправить заявку</button>
 			<div class="form-base__check mdl-clb__check">
-				<div class="form-base__check-lbl" for="checkModalOrd">
-					<input class="input-check j-inp-chk" type="checkbox" value="" id="checkModalOrd" checked>
+				<div class="form-base__check-lbl">
+					<input class="input-check j-inp-chk" type="checkbox" value="" checked>
 					Вы соглашаетесь на
 					<span class="j-chk-dsb">условия обработки персональных
 						данных</span>
@@ -1493,7 +1493,7 @@
 </div>
 
 
-	<script src="js/script.min.js?_v=20240118144545"></script>
+	<script src="js/script.min.js?_v=20240118161610"></script>
 
 
 </body>
