--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 		<div class="row-auto header__row">
 			<div class="header__brand">
-				<a href="/" class="site-logo">
+				<a href="index.html" class="site-logo">
 					<img src="img/icons/site-brand/site-brand.svg" loading="lazy" width="120" height="29"
 						alt="main logo">
 				</a>
